@@ -1,3 +1,8 @@
+2009-03-08  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
+
+	* gtksourceview/c-indenter.c:
+	Do not reinvent the wheel when checking case labels.
+
 2009-03-07  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
 
 	* gtksourceview/c-indenter.c:
